creusot/tests/should_fail/bug/436_2.stderr
error[creusot]: Illegal use of the Ghost type
 --> 436_2.rs:6:10
  |
6 |     Some(Ghost<&'a mut Bad<'a>>),
  |          ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

